--- a/Logistic Regression/Logistic Regression.Rmd
+++ b/Logistic Regression/Logistic Regression.Rmd
@@ -11,6 +11,38 @@ Source
 
 The dataset is publically available on the Kaggle website, and it is from an ongoing ongoing cardiovascular study on residents of the town of Framingham, Massachusetts. The classification goal is to predict whether the patient has 10-year risk of future coronary heart disease (CHD).The dataset provides the patients' information. It includes over 4,000 records and 15 attributes.
 
+The dataset has 4240 observations and 16 variables. The variables are as follows:
+
+sex : the gender of the observations. The variable is a binary named "male" in the dataset.
+
+age : Age at the time of medical examination in years.
+
+education : A categorical variable of the participants education, with the levels: Some high school (1), high school/GED (2), some college/vocational school (3), college (4)
+
+currentSmoker: Current cigarette smoking at the time of examinations
+
+cigsPerDay: Number of cigarettes smoked each day
+
+BPmeds: Use of Anti-hypertensive medication at exam
+
+prevalentStroke: Prevalent Stroke (0 = free of disease)
+
+prevalentHyp: Prevalent Hypertensive. Subject was defined as hypertensive if treated
+
+diabetes: Diabetic according to criteria of first exam treated
+
+totChol: Total cholesterol (mg/dL)
+
+sysBP: Systolic Blood Pressure (mmHg)
+
+diaBP: Diastolic blood pressure (mmHg)
+
+BMI: Body Mass Index, weight (kg)/height (m)^2
+
+heartRate: Heart rate (beats/minute)
+
+glucose: Blood glucose level (mg/dL)
+
 Importing Packages
 
 ```{r}
